--- a/Aula1/FisicaGeral_python_1.ipynb
+++ b/Aula1/FisicaGeral_python_1.ipynb
@@ -60,13 +60,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "import this"
    ]
@@ -91,7 +119,7 @@
     }
    },
    "source": [
-    "![title](animals_hero_burmesepython.jpg)"
+    "![title](pics/animals_hero_burmesepython.jpg)"
    ]
   },
   {
@@ -102,7 +130,7 @@
     }
    },
    "source": [
-    "![title](monty-python-wallpapers.jpg)"
+    "![title](pics/monty-python-wallpapers.jpg)"
    ]
   },
   {
@@ -173,14 +201,14 @@
     "   * abrir um terminal de Linux (com Python previamente instalado)\n",
     "   * python\n",
     "   * para sair: ctrl + D\n",
-    "   ![title](terminal.png)\n",
+    "   ![title](pics/terminal.png)\n",
     "   \n",
     "   * Para Windows, você pode usar o PyScripter para acessar o prompt ou rodar um script."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -193,7 +221,7 @@
        "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -264,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -287,19 +315,26 @@
    ],
    "source": [
     "tupla = (1, 8, 10) # a tupla é ordenada. A sintaxe são valores entre parênteses, separados por vírgulas\n",
-    "print(\"isto é uma tupla: \", tupla)\n",
-    "lista = [1, 8, 10] # a lista NÃO É ORDENADA. A sintaxe são valores entre colchetes, separados por vírgulas\n",
-    "print(\"isto é uma lista: \", lista)\n",
-    "dicionario = {'inteiro': 8, 'float': float(3.8), 'boolean': bool(1)} \n",
-    "print(\"isto é um dicionário: \", dicionario)\n",
-    "print(\"essas são as chaves do dicionario: \", dicionario.keys())\n",
-    "for keys in dicionario.keys():\n",
-    "    print(\"este é o valor da chave '{0}': {1}\".format(keys, dicionario[keys]))\n"
+    "print(\"isto é uma tupla: \", tupla)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lista = [1, 8, 10] # a lista NÃO É ORDENADA. A sintaxe são valores entre colchetes, separados por vírgulas\n",
+    "print(\"isto é uma lista: \", lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
