--- a/Aula1/FisicaGeral_python_1.ipynb
+++ b/Aula1/FisicaGeral_python_1.ipynb
@@ -201,9 +201,11 @@
     "   * abrir um terminal de Linux (com Python previamente instalado)\n",
     "   * python\n",
     "   * para sair: ctrl + D\n",
+    "   * Para Windows, você pode usar o PyScripter para acessar o prompt ou rodar um script.\n",
+    "   \n",
     "   ![title](pics/terminal.png)\n",
     "   \n",
-    "   * Para Windows, você pode usar o PyScripter para acessar o prompt ou rodar um script."
+    "   "
    ]
   },
   {
@@ -287,7 +289,9 @@
     "\n",
     "   * tuplas\n",
     "   * listas\n",
-    "   * dicionários"
+    "   * dicionários\n",
+    "   * tipos de dados built-in: https://docs.python.org/3/library/stdtypes.html\n",
+    "   * tipos de dados especializados: https://docs.python.org/3/library/datatypes.html"
    ]
   },
   {
@@ -303,13 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isto é uma tupla:  (1, 8, 10)\n",
-      "isto é uma lista:  [1, 8, 10]\n",
-      "isto é um dicionário:  {'inteiro': 8, 'float': 3.8, 'boolean': True}\n",
-      "essas são as chaves do dicionario:  dict_keys(['inteiro', 'float', 'boolean'])\n",
-      "este é o valor da chave 'inteiro': 8\n",
-      "este é o valor da chave 'float': 3.8\n",
-      "este é o valor da chave 'boolean': True\n"
+      "isto é uma tupla:  (1, 8, 10)\n"
      ]
     }
    ],
@@ -320,21 +318,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isto é uma lista:  [1, 8, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "lista = [1, 8, 10] # a lista NÃO É ORDENADA. A sintaxe são valores entre colchetes, separados por vírgulas\n",
-    "print(\"isto é uma lista: \", lista)\n"
+    "print(\"isto é uma lista: \", lista)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -354,6 +360,46 @@
    "source": [
     "for item in lista:\n",
     "    print(\"este é um item da lista: {item_lista}\".format(item_lista=item))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isto é um dicionário:  {'inteiro': 8, 'float': 3.8, 'boolean': True}\n",
+      "essas são as chaves do dicionario:  dict_keys(['inteiro', 'float', 'boolean'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicionario = {'inteiro': 8, 'float': float(3.8), 'boolean': bool(1)} \n",
+    "print(\"isto é um dicionário: \", dicionario)\n",
+    "print(\"essas são as chaves do dicionario: \", dicionario.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "este é o valor da chave 'inteiro': 8\n",
+      "este é o valor da chave 'float': 3.8\n",
+      "este é o valor da chave 'boolean': True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for keys in dicionario.keys():\n",
+    "    print(\"este é o valor da chave '{0}': {1}\".format(keys, dicionario[keys]))"
    ]
   },
   {
