--- a/Aula1/FisicaGeral_python_1.ipynb
+++ b/Aula1/FisicaGeral_python_1.ipynb
@@ -55,6 +55,19 @@
     }
    },
    "source": [
+    "## O Criador\n",
+    "Guido van Rossum\n",
+    "<img src=\"pics/Guido_van_Rossum.jpg\" alt=\"Drawing\" style=\"width: 200px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## O Zen do Python"
    ]
   },
@@ -367,7 +380,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -394,7 +411,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -691,9 +712,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Happy Pythoning!\n",
+    "## Feliz Python!\n",
     "![title](pics/antigravity_cartoon.png)\n"
    ]
   },
